slightly updated code

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                   placeholder="Product listing data"
                 />
                 <label for="productdate">Product Listing Date </label>
+                <!-- <label for="productdate">Product Listing Date </label> -->
               </div>
               <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <button
